css/styles.css
/* Styles */
body {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  min-height: 100vh;
  background-color: #1a0033;
  color: #ffffff;
  font-family: 'Press Start 2P', Arial, sans-serif;
  padding: 20px;
  text-align: center;
}

header {
  margin-bottom: 20px;
  max-width: 600px;
}

h1 {
  font-size: 2rem;
  color: #b19cd9;
  margin-bottom: 2.5rem; 
}

main {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
}

form {
  background: #2a004f;
  padding: 2.5rem;
  border-radius: 10px;
  max-width: 400px;
  width: 90%;
  display: flex;
  flex-direction: column;
  align-items: center;
  box-shadow: 0 0 15px rgba(177, 156, 217, 0.5);
}

#timer, #spots-left {
  font-size: 1em;
  margin-top: 0.5rem;
  color: #d4aaff;
}


label {
  align-self: flex-start;
  margin-top: 10px;
  font-weight: bold;
  text-align: center; 
  width: 100%;
}

input {
  width: 100%;
  padding: 0.5rem;
  margin-top: 0.5rem;
  border-radius: 0.5rem;
  background: #4b0082;
  color: #fff;
  border: 1px solid #b19cd9;
  font-size: 0.5em;
  text-align: center; 
  transition: border-color 0.3s ease;
}

input:focus {
  border-color: #8000ff;
  outline: none;
}


button {
  width: 100%;
  padding: 0.8rem;
  margin-top: 2rem;
  background: #8000ff;
  color: white;
  font-size: 1em;
  border-radius: 0.5rem;
  cursor: pointer;
  transition: background 0.3s ease;
}

button:hover {
  background: #6a00cc;
}

footer {
  margin-top: 2rem;
  font-size: 0.9em;
  color: #bbb;
}

/* Mobile Responsive Design */
@media (min-width: 600px) {
  form {
      width: 70%;
  }

  h1 {
    font-size: 2.2em;
  }
}

@media (min-width: 1024px) {
  form {
      width: 50%;
  }

  h1 {
    font-size: 2.5em;
  }
}

